Quick refactoring.  Boxed numeric types should use the .valueOf() factory, which among other things does a bit of caching (not coincidentally of the values we care most about).